# symphon

./: .gitignore  MEMNOTES.md  README.md  pyproject.toml
.tmp/: debug_has_spgrep.py  test_spgrep_mod_api.py
anaddb_irreps/: __init__.py  abstract_magnetic.py  chiral_transitions.py  cli.py  cli_abstract_magnetic.py  cli_chiral.py  cli_magnetic.py  cli_msg_chiral.py  irrep_backend.py  irreps_anaddb.py  msg_chiral.py
docs/: 2D_irreps.md  activity_methodology.md  algorithms.md  api.md  chiral_transitions_theory.md  example_109.md  generate_transition_tables.py  irreps_guide.md  magnetic_transitions.md  multi_k_transitions.md  usage.md
examples/: .gitignore  README.md
examples/1_basic_anaddb/: README.md  api_example.py  cli_example.sh
examples/2_basic_phonopy/: README.md  api_example.py  cli_example.sh
examples/3_advanced_phonopy/: README.md
examples/4_multi_kpoint_anaddb/: README.md  label_example.py
examples/5_chiral_phonon/: cli_example.sh  phonopy_params.yaml
examples/6_circular_phonon/: README.md  api_example.py  cli_example.sh
scripts/: generate_all_chiral_tables.py  generate_reference_json.py  regenerate_docs.py
symphon/: __init__.py  abstract_magnetic.py  chiral_transitions.py  cli.py  cli.py.backup  cli_abstract_magnetic.py  cli_chiral.py  cli_circular.py  cli_circular_abstract.py  cli_magnetic.py  cli_modulate.py  cli_msg_chiral.py  cli_symphon.py  irrep_backend.py  irreps_anaddb.py  msg_chiral.py  supercell_labels.py  symmetry_identification.py
symphon/chiral/: __init__.py  abstract_circular.py  circular.py  ops.py  sam.py  sohncke.py  transitions.py
symphon/cli/: __init__.py  main.py
symphon/io/: __init__.py  phbst.py
symphon/irreps/: __init__.py  backend.py  core.py  highsym.py  phonopy.py  projection.py  reporting.py
symphon/magnetic/: __init__.py  abstract.py  chiral.py  transitions.py
tests/: test_abstract_magnetic.py  test_chiral_transitions.py  test_cli.py  test_daughter_ground_truth.py  test_daughter_supercell_labels.py  test_more_sgs.py  test_msg_chiral.py  test_sam.py  test_sg142_atom_mapping.py
tests/data/: phonopy_params.yaml.xz  run.sh
tests/reference/2_basic_phonopy/: BaTiO3_phonopy_params.txt
tests/reference/3_advanced_phonopy/: TmFeO3_phonopy_params.txt
