[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symphon"
version = "0.2.5"
description = "symphon: use phonopy to find the irreducible representations of the phonon modes from anaddb output. It is a simple wrapper of the Phonopy irreps module."
readme = "README.md"
authors = [
  { name = "Xu He", email = "mailhexu@gmail.com" },
]
license = { text = "BSD-2-clause" }
requires-python = ">=3.10"
dependencies = [
  "numpy>1.16.5",
  "ase>=3.19",
  "phonopy>=2.43.0,<3.0.0",
  "h5py",
  "netCDF4",
  "spglib>=2.0.0",
  "spgrep>=0.5.0",
  "spgrep-modulation>=0.3.0",
  "irrep>=2.0.0",
  "irreptables>=3.0.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: BSD License",
]

[project.optional-dependencies]
abipy = ["abipy>=0.9.8"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools]
packages = ["symphon"]

[project.scripts]
anaddb-irreps = "symphon.cli.main:main"
phonopy-irreps = "symphon.cli.main:main_phonopy"
symphon = "symphon.cli_symphon:main"
symphon-modulate = "symphon.cli_modulate:main"
anaddb-chiral = "symphon.cli_chiral:main"
symphon-circular = "symphon.cli_circular:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
